# featurization

./: .gitignore  README.md  USER_GUIDE.md  config.yaml  copilot_init.md  featurizer_config.yaml  notebooks  pyproject.toml
.beads/: config.yaml  metadata.json
.github/: copilot-instructions.md
.github/agents/: plan.agent.md
.github/prompts/: plan.prompt.md
documents/: README.md  categorical_var_encoder_guidelines.md  client_onboarding.md  config_blueprint.md  consolidated_featurization_design.md  copilot_agent_discovery.md  datapackage.json  encoding_non_numerical_attrib.md  feature_advisor_service.md  notebook_utils_usage.md  path_coordinator_function.md  sba_pipeline_featurization.md  stash.md  survival_analysis_transformation_tool_design.md  survival_featurization_pipeline.md  test_documentation_principles.md  testing_survival_featurization_pipeline.md  text_attribute_featurization.md  user_guide_cs_featurization.md
documents/.ferrite/: state.json
documents/discarded/: file_routing_mech.md  parallel_pipeline_design.md  pipeline_design.md  project_setup.md
featurization_scripts/: featurization.py
gemini/: stash.md
src/featurization/: __init__.py  cli.py  engine.py  feature_advisor_util.py  notebook_utils.py  utils.py
src/featurization/core/: __init__.py  data_loader.py  featurization_init.py  path_coordinator.py  sequential_pipeline_runner.py
src/featurization/prompts/: feature_advisor_prompt.yaml
src/featurization/transforms/: filters.py  geo.py
src/kmds_featurization.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tabular/: __init__.py  attribute_derivation.py  entity_tagging.py  feature_space.py  hierarchical_low_count_var_encoding.py  low_count_cat_var_encoding.py  merge_ops.py  modeling_filter.py  survival_prep.py  target_encoding.py  train_val_split.py
tests/: __init__.py  create_geo_stripped_test_file.py  helpers.py  test_bootstrap_config.py  test_feature_advisor_util.py  test_feature_space.py  test_initialization.py  test_leakage_guards.py  test_low_count_cat_var_encoding.py  test_merge_ops.py  test_notebook_utils.py  test_notebook_utils_working_dir.py  test_package_discovery.py  test_sba_pipeline.py  test_survival_featurizer_pipeline.py  test_survival_prep.py  test_utils.py
