[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kmds-featurization"
version = "0.1.0"
description = "KMDS Featurization Service and Orchestration Pipeline"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "pgeocode",
    "category-encoders",
    "tabulate>=0.10.0",
]

[project.scripts]
featurization-cli = "featurization.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
