[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kmds-featurization"
version = "0.3.2"
description = "KMDS Featurization Service and Orchestration Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "pgeocode",
    "category-encoders",
    "kneed",
    "matplotlib",
    "tabulate>=0.10.0",
]

[project.scripts]
featurization-cli = "featurization.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"featurization" = ["prompts/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
